--- a/Html/contacto.html
+++ b/Html/contacto.html
@@ -24,6 +24,10 @@ Nuestra escuela se encuentra en el Aeroclub San Francisco, Av. Jorge Newbery y R
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+
 <!--Link iconos-->
 <script src="https://kit.fontawesome.com/c545a1e55d.js" crossorigin="anonymous"></script>
 
