--- a/Html/dropzone.html
+++ b/Html/dropzone.html
@@ -25,6 +25,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+
     <!--Link iconos-->
     <script src="https://kit.fontawesome.com/c545a1e55d.js" crossorigin="anonymous"></script>
 
