Se cambiaron algunos textos que tenian el lorem

--- a/Html/curso.html
+++ b/Html/curso.html
@@ -132,9 +132,7 @@
 
         <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center p-3">
 
-            <p class="paragraphGrid">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, quam vero eligendi
-                labore exercitationem, suscipit magni laudantium praesentium, officia animi aut expedita ipsam sit
-                recusandae sint! Eligendi neque veritatis quaerat.</p>
+            <p class="paragraphGrid">Esta es nuestro avion, Un CESSNA 206 con capacidad para cinco paracaidista. Nuestro avion cuenta con todas las habilitaciones DE ANAC para que el vuelo previo al lanzamiento sea seguro. </p>
         </div>
     </div>
 
