--- a/Html/saltoTandem.html
+++ b/Html/saltoTandem.html
@@ -114,9 +114,8 @@ Nuestra escuela se encuentra en el Aeroclub San Francisco, Av. Jorge Newbery y R
         </div>
 
         <div class="col-lg-5 col-sm-12 d-flex flex-column justify-content-center p-3">
-            <p class="paragraphGrid">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, quam vero eligendi
-                labore exercitationem, suscipit magni laudantium praesentium, officia animi aut expedita ipsam sit
-                recusandae sint! Eligendi neque veritatis quaerat.</p>
+            <p class="paragraphGrid">Veni a sentir la adrenalina de saltar de un avion desde 3000 metros de altura y caer a 200 km/h mientras disfrutas de una vista unica!!.
+                Luego de una breve instruccion ya estas listo para ponerte el arnes, engancharte al instructor y disfrutar de la sensacion de volar..</p>
         </div>
     </div>
 
@@ -127,9 +126,7 @@ Nuestra escuela se encuentra en el Aeroclub San Francisco, Av. Jorge Newbery y R
         </div>
 
         <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center p-3">
-            <p class="paragraphGrid">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, quam vero eligendi
-                labore exercitationem, suscipit magni laudantium praesentium, officia animi aut expedita ipsam sit
-                recusandae sint! Eligendi neque veritatis quaerat.</p>
+            <p class="paragraphGrid">Luego de una caida libre desde los 3000 metros, llena de adrenalina, aterriza de forma segura. </p>
         </div>
     </div>
 
